--- a/Web-components/index.html
+++ b/Web-components/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test JS</title>
+    <title>Web-components</title>
   </head>
   <body>
     <x-user-card
@@ -12,5 +12,6 @@
     ></x-user-card>
     <x-counter initial="3"></x-counter>
     <script src="main.js"></script>
+    <a href="../index.html">Ссылка на страницу навигации</a>
   </body>
 </html>
