--- a/Web-components/index.html
+++ b/Web-components/index.html
@@ -12,6 +12,6 @@
     ></x-user-card>
     <x-counter initial="3"></x-counter>
     <script src="main.js"></script>
-    <a href="../index.html">Ссылка на страницу навигации</a>
+    <a href="/index.html">Ссылка на страницу навигации</a>
   </body>
 </html>
