Added old folders into main folder

--- a/Web-components/index.html
+++ b/Web-components/index.html
@@ -11,7 +11,7 @@
       name="Gleb Rutskiy"
     ></x-user-card>
     <x-counter initial="3"></x-counter>
+    <a href="../index.html">Ссылка на страницу навигации</a>
     <script src="main.js"></script>
-    <a href="/index.html">Ссылка на страницу навигации</a>
   </body>
 </html>
