--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <div class="greeting">Привет, это навигатор для папок</div>
     <ul>
-      <li><a href="Web-components\index.html">Web-components</a></li>
+      <li><a href="Page loaders/index.html">Page loaders</a></li>
+      <li><a href="Function divide/index.html">Function divide</a></li>
+      <li><a href="Web-components/index.html">Web-components</a></li>
       <li>В ожидании....</li>
       <li>В ожидании....</li>
     </ul>
