reload Functions divide

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="greeting">Привет, это навигатор для папок</div>
     <ul>
       <li><a href="Page loaders/index.html">Page loaders</a></li>
-      <li><a href="Function divide/index.html">Function divide</a></li>
+      <li><a href="Functions divide/index.html">Functions divide</a></li>
       <li><a href="Web-components/index.html">Web-components</a></li>
       <li>В ожидании....</li>
       <li>В ожидании....</li>
