--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="Page loaders/index.html">Page loaders</a></li>
       <li><a href="Functions divide/index.html">Functions divide</a></li>
       <li><a href="Web-components/index.html">Web-components</a></li>
-      <li>В ожидании....</li>
+      <li><a href="Recursion etc./index.html">Recursion and etc.</a></li>
       <li>В ожидании....</li>
     </ul>
   </body>
