--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="Functions divide/index.html">Functions divide</a></li>
       <li><a href="Web-components/index.html">Web-components</a></li>
       <li><a href="Recursion etc/index.html">Recursion and etc</a></li>
+      <li><a href="Work with API/index.html">Work with API</a></li>
       <li>В ожидании....</li>
     </ul>
   </body>
