--- a/Work with API/index.html
+++ b/Work with API/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <a href="../index.html">Ссылка на страницу навигации</a>
+    <div id="main-container"></div>
     <script src="main.js"></script>
   </body>
 </html>
