--- a/Work with API/index.html
+++ b/Work with API/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work with API</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <a href="../index.html">Ссылка на страницу навигации</a>
-    <div id="main-container"></div>
+    <div class="goBack"><a href="../index.html">Ссылка на страницу навигации</a></div>
+    <div class="main-container"></div>
     <script src="main.js"></script>
   </body>
 </html>
