--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="Web-components/index.html">Web-components</a></li>
       <li><a href="Recursion etc/index.html">Recursion and etc</a></li>
       <li><a href="Work with API/index.html">Work with API</a></li>
+      <li><a href="React-app/index.html">React application</a></li>
       <li>В ожидании....</li>
     </ul>
   </body>
