completed last homework, in nodeJs all working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           <li><a href="Web-components/index.html" draggable="false">Web-components</a></li>
           <li><a href="Recursion etc/index.html" draggable="false">Recursion and etc</a></li>
           <li><a href="Work with API/index.html" draggable="false">Work with API</a></li>
-          <li><a href="react-app" draggable="false">React application</a></li>
+          <li><a href="CJSvsESJS/index.html" draggable="false">CJS vs ESJS</a></li>
+          <li><a href="react-app" draggable="false">React(not working)</a></li>
           <li class="content__links-soon">Coming soon...</li>
         </ul>
       </div>
